--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=bookingdemo
+# H2 Database Configuration (In-memory)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.platform=h2
+
+# Hibernate Dialect and DDL Auto Configuration
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Initialize Database from data.sql
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+
+# Enable H2 Console (optional for debugging)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
